Added sample environment

--- a/etl/.env.sample
+++ b/etl/.env.sample
@@ -5,8 +5,14 @@ pg_user=app
 pg_pass=123qwe
 pg_host=db
 pg_port=5432
-django_secret_key=secret_key
+django_secret_key=secret
 debug=True
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_PASSWORD=123qwe
 DJANGO_SUPERUSER_EMAIL=test@test.com
+redis_host=redis
+redis_port=6379
+redis_pass=test
+elastic_host=9200
+elastic_port=elasticsearch
+use_redis_storage=True
