--- a/etl/docker-compose.yml
+++ b/etl/docker-compose.yml
@@ -57,11 +57,50 @@ services:
       - POSTGRES_DB=${pg_db}
       - POSTGRES_USER=${pg_user}
       - POSTGRES_PASSWORD=${pg_pass}
+    ports:
+      - "${pg_port}"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
       timeout: 5s
       retries: 5
+    networks:
+      - movies
+
+  elasticsearch:
+    image: elasticsearch:8.6.2
+    restart: always
+    ports:
+      - "${elastic_port}:${elastic_port}"
+    environment:
+      discovery.type: single-node
+      xpack.security.enabled: false
+      cluster.routing.allocation.disk.threshold_enabled: false
+    healthcheck:
+      test: curl -s http://elasticsearch:9200 >/dev/null || exit 1
+      interval: 1s
+      timeout: 1s
+      retries: 50
+    networks:
+      - movies
+
+  redis:
+    image: redis:latest
+    ports:
+      - "${redis_port}"
+    command: redis-server --requirepass ${redis_pass} --appendonly yes
+    networks:
+      - movies
+
+  etl:
+    build:
+      context: .
+      dockerfile: dockerfiles/Dockerfile.etl
+    env_file:
+      - ./.env
+    depends_on:
+      elasticsearch:
+        condition: service_healthy
     networks:
       - movies
 
