--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,4 +9,4 @@ jobs:
     - uses: actions/checkout@v3
     - uses: isbang/compose-action@v1.4.1
       with:
-        compose-file: "./postgres_to_es/docker-compose.test.yml"
+        compose-file: "./etl/docker-compose.tests.yml"
