--- a/etl/docker-compose.tests.yml
+++ b/etl/docker-compose.tests.yml
@@ -73,9 +73,9 @@ services:
     ports:
       - "${elastic_port}:${elastic_port}"
     environment:
-      discovery.type: single-node
-      xpack.security.enabled: false
-      cluster.routing.allocation.disk.threshold_enabled: false
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - cluster.routing.allocation.disk.threshold_enabled=false
     healthcheck:
       test: curl -s http://${elastic_host}:${elastic_port} >/dev/null || exit 1
       interval: 1s
