--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Rename file 
-      run: mv .env.sample .env
+      run: mv ./etl/.env.sample ./etl/.env
 
     - uses: isbang/compose-action@v1.4.1
       with:
