--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,9 +8,13 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Rename file 
+    - name: Rename .env file 
       run: mv ./etl/.env.sample ./etl/.env
 
+    - name: 
     - uses: isbang/compose-action@v1.4.1
       with:
         compose-file: "./etl/docker-compose.tests.yml"
+
+    - name:
+    run: docker attach etl-newman-1 
