--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,5 +18,5 @@ jobs:
       with:
         compose-file: "./etl/docker-compose.tests.yml"
 
-    - name:
+    - name: Attach to Newman
       run: docker attach etl-newman-1 
