--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,10 +12,8 @@ jobs:
     - name: Rename .env file 
       run: mv ./etl/.env.sample ./etl/.env
 
-    
-    - uses: isbang/compose-action@v1.4.1
-      with:
-        compose-file: "./etl/docker-compose.tests.yml"
+    - name: Build
+        run: docker-compose -f ./etl/docker-compose.tests.yml build && docker-compose -d up
 
     - name: Attach to Newman
       run: docker attach etl-newman-1 
