--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,7 @@ jobs:
       run: docker-compose -f ./etl/docker-compose.tests.yml build
 
     - name: Up
-      run: docker-compose -f ./etl/docker-compose.tests.yml up
+      run: docker-compose -f ./etl/docker-compose.tests.yml up -d
 
     - name: Attach to Newman
-      run: docker attach etl-newman-1 
+      run: docker attach newman-1 
