--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,4 +22,4 @@ jobs:
       run: docker ps 
 
     - name: Attach to Newman
-      run: docker attach newman-1 
+      run: docker attach etl_newman_1 
