--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,22 +1,21 @@
+name: newman-tests
+
 on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    
-    name: Hello world
-  
+
     steps:
+      - uses: actions/checkout@v3
 
-    - uses: actions/checkout@v3
+      - name: Rename .env file
+        run: mv ./etl/.env.sample ./etl/.env
 
-    - name: Rename .env file 
-      run: mv ./etl/.env.sample ./etl/.env
+      - name: Build
+        run: docker-compose -f ./etl/docker-compose.tests.yml build
 
-    - name: Build
-      run: docker-compose -f ./etl/docker-compose.tests.yml build
+      - name: Up
+        run: docker-compose -f ./etl/docker-compose.tests.yml up -d
 
-    - name: Up
-      run: docker-compose -f ./etl/docker-compose.tests.yml up -d
-
-    - name: Attach to Newman
-      run: docker attach etl_newman_1
+      - name: Attach to Newman
+        run: docker attach etl_newman_1
