--- a/etl/docker-compose.yml
+++ b/etl/docker-compose.yml
@@ -22,7 +22,8 @@ services:
     env_file:
       - ./.env
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     networks:
     - movies
 
@@ -73,11 +74,11 @@ services:
     ports:
       - "${elastic_port}:${elastic_port}"
     environment:
-      discovery.type: single-node
-      xpack.security.enabled: false
-      cluster.routing.allocation.disk.threshold_enabled: false
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - cluster.routing.allocation.disk.threshold_enabled=false
     healthcheck:
-      test: curl -s http://elasticsearch:9200 >/dev/null || exit 1
+      test: curl -s http://${elastic_host}:${elastic_port} >/dev/null || exit 1
       interval: 1s
       timeout: 1s
       retries: 50
